assets/style.css
@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap');


* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    background-color: #393D3F;
}

h1, li {
    font-family: "Ubuntu", sans-serif;
    font-weight: 500;
    font-size: 30px;
    text-decoration: none;
    background-color: #62929E;
}

/* Header */

header, section {
    margin: 5%;
}

header {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    padding: 30px 10%;
    height: 300px;
    background-color: #62929E;
    border-radius: 70px;
    border: 15px solid #546A7B;
}

header h1 {
    color: #C6C5B9;
    font-size: 30px
}

.nav_links {
    list-style: none;
    display: flex;
}

.nav_links li {
    display: inline-block;
    padding: 0px 20px;
}

.nav_links li a {
    text-decoration: none;
    color: black;
    background-color: #62929E;
    color: #C6C5B9;
}

.nav_links li a:hover {
    color: #546A7B;
    font-size: 35px;
}

/* About Me section  */

.aboutme {
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: 30px 10%;
    height: 800px;
    justify-content: space-evenly;
    font-family: "Ubuntu", sans-serif;
    line-height: 2;
    background-color: #62929E;
    border-radius: 70px;
    border: 15px solid #546A7B;
}

.profilepic {
    max-width: 30%;
    max-height: 500px;
    border-radius: 70px;
    border: 15px solid #546A7B;
}

.aboutme div {
    padding: 30px 10%;
    font-size: 20px;
    background-color: #62929E;
}

.aboutme div h2 {
    background-color: #62929E;
}

.aboutme div p {
    background-color: #62929E;
}

/* My work section  */


.mywork {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    flex-direction: column;
    justify-content: space-evenly;
    padding: 30px 10%;
    height: 1700px;
    background-color: #62929E;
    font-family: "Ubuntu", sans-serif;
    border-radius: 70px;
    border: 15px solid #546A7B;
}

.mywork h2 {
    font-size: 70px;
    display: flex;
    flex-wrap: wrap;
    background-color: #62929E;
    color: #C6C5B9; 
}

.mywork div {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    width: 100%;
    background-color: #62929E;
}

.mywork div p {
    margin-bottom: 100px;
    text-align: center;
    background-color: #62929E;
    font-size: 20px;
}

#largerproject {
    width: 70%;
    height: 500px;
    border-radius: 70px;
    align-self: center;
    border: 15px solid #546A7B;
    margin-bottom: 50px;
}

#largerproject img {
    height: 100%;
    width: 100%;
    border-radius: 70px;
}



#largerproject:hover {
    border-color:#C6C5B9;
}



#smallerprojects {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
}

#smallerprojects p {
    align-self: center;
    font-size: 20px;
}


.small {
    width: 40%;
    height: 300px;
    margin-bottom: 50px;
    align-self: center;
    border: 15px solid #546A7B;
    border-radius: 70px;
}


#smallerprojects a:hover {
    border-color:#C6C5B9;
}

#smallerprojects a {
    width: 20%;
    font-size: 16px;

}

.small img {
    height: 100%;
    width: 100%;
    border-radius: 70px;
}

/* Contact Me Section  */

.contact {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    padding: 30px 10%;
    background-color: #62929E;;
    height: 200px; 
    font-size: 30px;
    font-family: "Ubuntu", sans-serif;
    flex-direction: column;
    margin-bottom: 5%;
    border-radius: 70px 70px 0px 0px;
    border: 15px solid #546A7B;
}

.contact h2 {
    background-color: #62929E;
    color: #C6C5B9;
}

.contact div {
    display: flex;
    justify-content: space-evenly;
    width: 70%;
    height: 70%;
    align-items: center;
    background-color: #62929E;
}

.contact div a {
    text-decoration: none;
    color: black;
    background-color: #62929E;
}

.contact div a:hover {
    color: #546A7B;
    font-size: 35px;
}

@media (max-width: 1201px) {
    .aboutme {
        flex-direction: column;
        height: 1000px;
    }

    .profilepic {
        max-width: 80%;
    }

    .mywork {
        height:2000px
    }
    
    #smallerprojects {
        flex-direction: column;
    }

    #smallerprojects a {
        height: 200px;
        width: 60%;
    }

    .contact {
        height: 400px;
    }

    .contact div {
        flex-direction: column;;
    }
}

@media (max-width: 1300px) {
    header {
        flex-direction: column;
        text-align: center;justify-content: space-evenly;
    }

    header nav {
        line-height: 1.6;
    }
}

@media (max-width: 790px) {
    .nav_links {
        flex-direction: column;
    }

    .profilepic {
        max-height: 400px;
        margin-top: 20px;
    }

    .aboutme {
        height: 1200px;
    }


}

@media (max-width: 470px) {
    .mywork h2 {
        font-size: 30px;
    }
}

@media (max-width: 430px) {
    .mywork {
        height: 6000px;
    }
    
}

